prevent word wrap in vote score

--- a/3p.css
+++ b/3p.css
@@ -39,6 +39,7 @@ a:hover {
   height: 100%;
   padding: 1%;
   flex: 2%;
+  word-break: normal;
 }
 
 .arrow-wrapper {
